[package]
name = "fantasy"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]

description = "Fantasy teelegram code generator"
homepage = "https://github.com/fewensa/fantasy"
repository = "https://github.com/fewensa/fantasy"
license = "MIT"
keywords = [ "fantasy", "codegen", "telegram"]
categories = ["encoding"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
readme = "README.md"
edition = "2018"


[dependencies]

tl-parser = { path = "../tl-parser" }

text-reader = "0.2"
rstring-builder = "0.1"
toolkit = "0.1"

typed-builder = "0.3.0"

colored = "1.8"
case = "1.0.0"

lazy_static = "1.3"
failure = "0.1.5"
log = "0.4"
simple_logger = "1.3"

tera = "0.11.20"


serde = "1"
serde_derive = "1"
serde_json = "1"

toml = "0.5"

